--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+jwt.secret=eshop
+jwt.expiration=86400000
