--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,16 @@ spring.datasource.url=jdbc:mysql://localhost:3306/eshop
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 jwt.secret=eshop
 jwt.expiration=86400000
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#Turn Statistics on
+#spring.jpa.properties.hibernate.generate_statistics=true
+#logging.level.org.hibernate.stat=debug
